# cellxgene-lamin

./: .gitignore  .pre-commit-config.yaml  README.md  genes_homo_sapiens.csv  genes_mus_musculus.csv  genes_sars_cov_2.csv  lamin-project.yaml  noxfile.py  pyproject.toml
.github/workflows/: build.yml
cellxgene_census_lamin/: __init__.py
cellxgene_lamin/: __init__.py  _annotate.py  _curate.py  _cxg_rest.py  _features.py  _fields.py  _gene.py  _labels.py  _ontology.py  _organism.py  _validator.py  curate.py  datasets.py  fields.py
cellxgene_lamin/dev/: __init__.py  _cxg_rest_api.py  _features.py  _gene.py  _labels.py  _ontology.py  _organism.py  datasets.py
cellxgene_lamin/schemas/: _schema_versions.py  schema_versions.yml
docs/: 01-cellxgene-registries.ipynb  01-census-registries.ipynb  01-prepare-registries.ipynb  02-cellxgene-census.ipynb  02-query-census.ipynb  03-cellxgene-census.ipynb  03-cellxgene.ipynb  03-query-census.ipynb  cellxgene-annotate.ipynb  cellxgene-curate.ipynb  cellxgene-curate.md  cellxgene-curate_NOTCI.ipynb  cellxgene-curate_TEST.ipynb  cellxgene-lamin-validator.ipynb  cellxgene.ipynb  cellxgene.md  census.ipynb  changelog.md  guide.md  index.md  notebooks.md  query-census.ipynb  quickstart.ipynb  reference.md  updating_cellxgene_instance.md
docs/notebooks/: annotate-release-2025-01-30-LTS.py  cencus-release-2023-12-15-LTS.ipynb  cencus-release-2024-07-01-LTS.ipynb  cencus-release-2025-01-30-LTS.ipynb  census-release-2023-11.ipynb  (+13 more)
scripts/: ensembl_helpers.py
tests/: test_base.py  test_notebooks.py
tiledb_lamin_scrna/: __init__.py
